Fix margin and alignment in callout

--- a/assets/css/global.less
+++ b/assets/css/global.less
@@ -1527,7 +1527,7 @@ body .guides .guides-section-white {
 
   .title {
     font-weight: bold;
-    margin-bottom: 0;
+    margin-bottom: 0 !important;
   }
 
   table {
@@ -1541,7 +1541,6 @@ body .guides .guides-section-white {
         position: relative;
         font-size: 0;
         text-align: center;
-        line-height: 10px;
         &:after {
           display: block;
           position: absolute;
